--- a/style.css
+++ b/style.css
@@ -37,14 +37,14 @@ ul {
 li {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  border-bottom: 1px solid #ddd;
-  
-
+  background-color: #fff;
+  padding: 8px;
+  margin: 5px 0;
+  border: 1px solid #ddd;
+  border-radius: 4px;
 }
 
-li.completed {
+.completed {
   text-decoration: line-through;
   color: gray;
 }
